--- a/_includes/home.html
+++ b/_includes/home.html
@@ -5,6 +5,7 @@
         <section class="header">
             <nav>
                 <!--the logo on the header-->
+                <h2>Iwazaki</h2>
                 <div class="nav-links">
                     <ul>
                         <!--the links to the other pages-->
@@ -13,6 +14,7 @@
                         <li><a href="{{ site.baseurl }}/selection.html">Selection</a></li>
                         <li><a href="{{ site.baseurl }}/insertion.html">Insertion</a></li>
                         <li><a href="{{ site.baseurl }}/merge.html">Merge</a></li>
+                        <li><a href="{{ site.baseurl }}/making.html">About</a></li>
                     </ul>
                     <!--loading screen-->
                     <script>
