--- a/bubble.css
+++ b/bubble.css
@@ -35,12 +35,19 @@ p {
     padding: 30px;
 }
 /*Coding Blacks*/
-pre code {
-    background-color: #eee;
-    border: 1px solid #999;
-    display: block;
-    padding: 20px;
+pre {
+    margin: 30px;
     font-family: 'Slackside One', cursive;
+}
+
+pre code {
+    background-color: #ffdfdf;
+    border: transparent;
+    display: block;
+    padding: 20px 60px;
+    margin: 30px;
+    border-radius: 10px;
+    padding-left: 40px;
 }
 
 .column {
